Your html and css code

--- a/yay.html
+++ b/yay.html
@@ -4,10 +4,16 @@
 		<title>Student Bio</title>
 	</header>
 <body>
-	
-	<h1>Student Bio</h1>
-	<br>
 
+	<header>
+
+	<h1>Student Bio</h1>
+
+	 </header>
+	
+	<div>
+	
+    <section>
 	<h2>Mark Baylis</h2>
 	<br>
 
@@ -15,15 +21,25 @@
 
 	<p>I'm origilanny from Jamaica and have always had an interest in coding. My father is an I.T. major who loves teaching people new things, it is from him that i derive my desire to learn.</p>
 
-	<br>
+    </section>
+
+	<section>
 
 	<h2>Contact info</h2>
 
 	<ul>
-		<li> Email: <a href="https://www.google.com">markb@google.com</a></li>
-		<li> GitHub: <a href="https://github.com/MarkB22">MarkB22</a></li>
-		<li> Portfolio <a href="https://www.google.com">Coming Soon</a></li>
+		<li>	<strong>Email:</strong>	<a href="https://www.google.com">markb@google.com</a></li>
+		<li> 	<strong>GitHub:</strong>	 <a href="https://github.com/MarkB22">MarkB22</a></li>
+		<li> <strong>Portfolio:</strong> <a href="#">Coming Soon</a></li>
 	</ul>
+
+	</section>
+
+	
+
+
+	</div>
+
 
 </body>
 
