--- a/studentbio.html
+++ b/studentbio.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
 <html>
+
+
 	<header>
 		<title>Student Bio</title>
 	</header>
+
+
+<head>	
+
+<style>
+		
+		h1 {
+			font-size: 60px;
+			text-align: center;
+			margin-bottom: 15px;
+			text-decoration: underline; 
+			background-color: black;
+			color: white;
+		}
+
+		h2 {
+			font-size: 40px;
+			text-align: center;
+			margin-top: 15px;
+			margin-bottom: 15px
+
+		}
+
+		h3{
+			font-size: 20px;
+			text-align: center;
+			margin-top: 15px
+		}
+
+
+
+
+	</style>
+
+
+
+
+</head>
+
+
+
+
+
 <body>
 
 	<header>
